--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,12 @@ test:
     - cargo test --verbose
   dependencies:
     - build
+
+backwards-compatibility-test:
+  stage: test
+  image: rust:1.37.0
+  script:
+    - cargo test --verbose
     
 docs:
   stage: deploy
