--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-honggfuzz = "=0.5.45"
+honggfuzz = "0.5.47"
 hexponent = { path = "../" }
