--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ backwards-compatibility-test:
   stage: test
   image: rust:1.34
   script:
+    - cargo clean
     - cargo test --verbose
     
 docs:
