--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ backwards-compatibility-test:
   image: rust:1.34
   script:
     - cargo clean
-    - cargo test --verbose
+    - cargo test --verbose --tests
     
 docs:
   stage: deploy
