--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,7 @@ backwards-compatibility-test:
   stage: test
   image: rust:1.34
   script:
-    - cargo test --verbose
-  variables:
-    GIT_STRATEGY: clone
+    - cargo check --verbose
     
 docs:
   stage: deploy
